--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ output
 /POO1/OlaMundo5/nbproject/private/
 /POO1/OlaMundo5/build/
 /POO1/OlaMundo5/dist/
+/POO1/PassagemParametros/nbproject/private/
+/POO1/PassagemParametros/build/
