--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ output
 /POO1/OlaMundo5/dist/
 /POO1/PassagemParametros/nbproject/private/
 /POO1/PassagemParametros/build/
+/POO1/criacaometodos01/nbproject/private/
+/POO1/criacaometodos01/build/
