--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ output
 /POO1/PassagemParametros/build/
 /POO1/criacaometodos01/nbproject/private/
 /POO1/criacaometodos01/build/
+/POO1/UsandoClassesSemMain/nbproject/private/
+/POO1/UsandoClassesSemMain/build/
