--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ output
 /POO1/criacaometodos01/build/
 /POO1/UsandoClassesSemMain/nbproject/private/
 /POO1/UsandoClassesSemMain/build/
+/POO1/LeituraDeArquivo/nbproject/private/
+/POO1/LeituraDeArquivo/build/
+/POO1/LerNotas/nbproject/private/
+/POO1/LeituraDeArquivo_1/nbproject/private/
+/POO1/EscreverNoArquivo/nbproject/private/
