--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ output
 /POO1/LerNotas/nbproject/private/
 /POO1/LeituraDeArquivo_1/nbproject/private/
 /POO1/EscreverNoArquivo/nbproject/private/
+/POO1/ExemplosdeMath/nbproject/private/
+/POO1/ExemplosdeMath/build/
