--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ output
 /POO1/EscreverNoArquivo/nbproject/private/
 /POO1/ExemplosdeMath/nbproject/private/
 /POO1/ExemplosdeMath/build/
+/POO1/MetodosStrings/nbproject/private/
+/POO1/MetodosStrings/build/
