--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ output
 /POO1/ExemplosdeMath/build/
 /POO1/MetodosStrings/nbproject/private/
 /POO1/MetodosStrings/build/
+/POO1/VissibilidadedeClasses/nbproject/private/
+/POO1/VissibilidadedeClasses/build/
