updated poo add ExemplosdeArrayList, ler guerreiros

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ output
 /POO1/MetodosStrings/build/
 /POO1/VissibilidadedeClasses/nbproject/private/
 /POO1/VissibilidadedeClasses/build/
+/POO1/LerGuerreiros/nbproject/private/
+/POO1/ArrayList/nbproject/private/
+/POO1/ArrayList/build/
+/POO1/ExemplosdeArrayList/nbproject/private/
