--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ output
 /POO1/ArrayList/nbproject/private/
 /POO1/ArrayList/build/
 /POO1/ExemplosdeArrayList/nbproject/private/
+/POO1/ExemplosdeArrayList/build/
