--- a/POO1/ExemplosdeArrayList/nbproject/project.properties
+++ b/POO1/ExemplosdeArrayList/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ExemplosdeArrayList
-main.class=exemplosdearraylist.ExemplosdeArrayList$UsaArrayList
+main.class=exemplosdearraylist.ExemplosdeArrayList
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
