updated poo associacao

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ output
 /POO1/ArrayList/build/
 /POO1/ExemplosdeArrayList/nbproject/private/
 /POO1/ExemplosdeArrayList/build/
+/POO1/Associacao/nbproject/private/
+/POO1/Associacao/build/
