updated Usando Pessoa Polimorfa

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ output
 /POO1/ExemplosdeArrayList/build/
 /POO1/Associacao/nbproject/private/
 /POO1/Associacao/build/
+/POO1/UsandoPessoaPolimorfa/nbproject/private/
+/POO1/UsandoPessoaPolimorfa/build/
