updated metodos e classes abistratas

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ output
 /POO1/Associacao/build/
 /POO1/UsandoPessoaPolimorfa/nbproject/private/
 /POO1/UsandoPessoaPolimorfa/build/
+/POO1/encapsulamento_atributos/nbproject/private/
+/POO1/MetodosEClassesAbistratas/nbproject/private/
