--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ output
 /POO1/UsandoPessoaPolimorfa/build/
 /POO1/encapsulamento_atributos/nbproject/private/
 /POO1/MetodosEClassesAbistratas/nbproject/private/
+/POO1/Interfaces/nbproject/private/
