Updated POO Excecoes

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ output
 /POO1/encapsulamento_atributos/nbproject/private/
 /POO1/MetodosEClassesAbistratas/nbproject/private/
 /POO1/Interfaces/nbproject/private/
+/POO1/Ececoes/nbproject/private/
+/POO1/Ececoes/build/
+/POO1/Ececoes/dist/
+/POO1/Excecoes/nbproject/private/
+/POO1/Excecoes/build/
