updated poo usando comparable e comparator

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ output
 /POO1/Ececoes/dist/
 /POO1/Excecoes/nbproject/private/
 /POO1/Excecoes/build/
+/POO1/UsandoComparable/nbproject/private/
+/POO1/UsandoComparable/build/
+/POO1/UsandoComparableEComparator/nbproject/private/
