add trabalho de aplicativo completo

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ output
 /POO1/UsandoComparable/nbproject/private/
 /POO1/UsandoComparable/build/
 /POO1/UsandoComparableEComparator/nbproject/private/
+/POO1/TrabalhoAplicativoCompleto/nbproject/private/
