updated POO, add provas

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ output
 /POO1/UsandoComparable/build/
 /POO1/UsandoComparableEComparator/nbproject/private/
 /POO1/TrabalhoAplicativoCompleto/nbproject/private/
+/POO1/ProvaAeronave/nbproject/private/
+/POO1/ProvaAeronave/build/
+/POO1/UsandoDrones/nbproject/private/
+/POO1/UsandoDrones/build/
