--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ output
 /POO1/ProvaAeronave/build/
 /POO1/UsandoDrones/nbproject/private/
 /POO1/UsandoDrones/build/
+/POO1/ProvaVeiculo/nbproject/private/
+/POO1/ProvaVeiculo/build/
