--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ output
 /POO1/UsandoDrones/build/
 /POO1/ProvaVeiculo/nbproject/private/
 /POO1/ProvaVeiculo/build/
+/POO1/ProvaZoologico/nbproject/private/
+/POO1/ProvaZoologico/build/
+/POO1/LARC_2016/nbproject/private/
