--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ output
 /POO1/ProvaZoologico/nbproject/private/
 /POO1/ProvaZoologico/build/
 /POO1/LARC_2016/nbproject/private/
+/POO1/ProvaSuplemento/nbproject/private/
+/POO1/ProvaSuplemento/build/
+/POO1/Serializacao/build/
+/POO1/Serializacao/nbproject/private/
