--- a/POO2/ExemplodeJanelas1/pom.xml
+++ b/POO2/ExemplodeJanelas1/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>ExemplodeJanelas1</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE240</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
