updated aula CSS inicial

--- a/POO2/ExemplodeJanelas1/pom.xml
+++ b/POO2/ExemplodeJanelas1/pom.xml
@@ -5,6 +5,20 @@
     <artifactId>ExemplodeJanelas1</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.netbeans.external</groupId>
