--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ output
 /POO1/Serializacao/build/
 /POO1/Serializacao/nbproject/private/
 POO2/XFomeHibernate_2025_1
+/POO2/Strategy/build/
+/POO2/Strategy/nbproject/private/
