--- a/Calculo-1/Trabalho De PG Código em Python/requirements.txt
+++ b/Calculo-1/Trabalho De PG Código em Python/requirements.txt
@@ -1,10 +1,54 @@
-backports.functools-lru-cache==1.6.6
-cycler==0.10.0
-kiwisolver==1.1.0
-matplotlib==2.2.5
-numpy==1.16.6
-pygame==1.9.2a0
-pyparsing==2.4.7
+bidict==0.23.1
+blinker==1.9.0
+brotli==1.2.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.1
+colorama==0.4.6
+ConfigArgParse==1.7.1
+contourpy==1.3.3
+cycler==0.12.1
+Flask==3.1.2
+flask-cors==6.0.1
+Flask-Login==0.6.3
+fonttools==4.60.1
+gevent==25.9.1
+geventhttpclient==2.3.5
+geventhttpclient-wheels==1.3.1.dev3
+greenlet==3.2.4
+h11==0.16.0
+idna==3.10
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.9
+locust==2.42.5
+locust-cloud==1.29.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+msgpack==1.1.2
+numpy==2.3.4
+packaging==25.0
+pillow==12.0.0
+platformdirs==4.5.0
+pluggy==1.6.0
+psutil==7.1.3
+pycparser==2.23
+Pygments==2.19.2
+pyparsing==3.2.5
+pytest==9.0.1
 python-dateutil==2.9.0.post0
-pytz==2025.2
+python-engineio==4.12.3
+python-socketio==5.14.3
+pywin32==311
+pyzmq==27.1.0
+requests==2.32.4
+simple-websocket==1.1.0
 six==1.17.0
+urllib3==2.5.0
+websocket-client==1.9.0
+Werkzeug==3.1.3
+wsproto==1.3.2
+zope.event==6.1
+zope.interface==8.1.1
