--- a/Calculo-1/Trabalho De PG Código em Python/requirements.txt
+++ b/Calculo-1/Trabalho De PG Código em Python/requirements.txt
@@ -3,6 +3,7 @@ cycler==0.12.1
 fonttools==4.60.1
 kiwisolver==1.4.9
 matplotlib==3.10.7
+mpmath==1.3.0
 numpy==2.3.5
 packaging==25.0
 pillow==12.0.0
@@ -10,3 +11,4 @@ pygame==2.5.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 six==1.17.0
+sympy==1.14.0
